--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-router-hash-link": "^1.2.0",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-slick": "^0.23.1",
     "recompose": "^0.26.0",
